--- a/src/app/adminboard/pharmacy/medreport/medreport.component.html
+++ b/src/app/adminboard/pharmacy/medreport/medreport.component.html
@@ -43,7 +43,7 @@
                     <label for="">Quantity Purchase:</label>
                     <input
                       class="form-control"
-                      type="text"
+                      type="number"
                       name=""
                       id=""
                       formControlName="med_quantity"
@@ -52,13 +52,11 @@
             
                   <div class="form-group col">
                     <label for="">Country:</label>
-                    <input
-                      class="form-control"
-                      type="text"
-                      name=""
-                      id=""
-                      formControlName="med_courty"
-                    />
+                    <select class="form-select" formControlName="med_courty">
+                      <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
+                      <option value="bd">Bangladesh</option>
+                      <option value="ind">India</option>
+                    </select>
                 </div>
                 </div>
             
@@ -67,7 +65,7 @@
                     <label for="">Manufacture Date:</label>
                     <input
                       class="form-control"
-                      type="text"
+                      type="date"
                       name=""
                       id=""
                       formControlName="med_manufacture_date"
@@ -79,7 +77,7 @@
                     <label for="">Expiry Date:</label>
                     <input
                       class="form-control"
-                      type="text"
+                      type="date"
                       name=""
                       id=""
                       formControlName="med_expiry_date"
@@ -117,7 +115,7 @@
                     type="submit"
                     class="btn btn-info btn-lg float-right d-flex justify-content-center me-2"
                     id="btnLogin"
-                    
+                    (click)="create()"
                   >
                     Add in Stock
                   </button>
