--- a/src/app/adminboard/pharmacy/pharmacy.component.html
+++ b/src/app/adminboard/pharmacy/pharmacy.component.html
@@ -53,7 +53,7 @@
           <br>
   
           <div class="d-flex justify-content-center"><button type="submit"
-              class="btn btn-outline-dark btn-sm float-right d-flex justify-content-center" id="btnLogin"
+              class="btn btn-outline-success float-right d-flex justify-content-center" id="btnLogin"
               (click)="create()">Create Medicine</button></div>
   
         </form>
@@ -64,6 +64,9 @@
   
         <!-- Bootstrap or jquery Table -->
         <div class="table_wrapper col-8">
+          <div class="bg-secondary mb-4">
+            <h6 class="bg-info p-3 text-white">All the Medicines:</h6>
+          </div>
 
           <mat-form-field>
             <mat-label>Search Your Data Here</mat-label>
@@ -108,7 +111,7 @@
 
 
               <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Department Manager </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
                 <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
                     (click)="edit( row)">Edit</button>|
                   <button class="btn btn-danger btn-sm ms-1" (click)="deleteByID(row.id)">Delete</button>
@@ -124,6 +127,8 @@
       </tr> -->
             </table>
           </div>
+          <mat-paginator [pageSizeOptions]="[10, 20,30, 100]" showFirstLastButtons
+          aria-label="Select page of users"></mat-paginator>
         </div>
   
   
