--- a/src/app/adminboard/pharmacy/supplier/supplier.component.html
+++ b/src/app/adminboard/pharmacy/supplier/supplier.component.html
@@ -67,9 +67,9 @@
                     type="submit"
                     class="btn btn-info btn-lg float-right d-flex justify-content-center me-2"
                     id="btnLogin"
-                    (click)="getmethod()"
+                    (click)="create()"
                   >
-                    Add in Stock
+                    Add Supplier
                   </button>
             
                   <button
@@ -77,7 +77,7 @@
                     id="btnLogin"
                     routerLink="/admin/doctors"
                   >
-                    Medicine List
+                    Medicine Report
                   </button>
                 </div>
               </form>
